--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<style>
 		body {
-			background: #2f2f2f;
+			background-image:url(./assets/images/Background.png);
 			margin: 0;
 			padding: 0;
 		}
