initial commit in new mac

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>QUAD Connect</title>
 
 	<script src="lib/phaser.min.js"></script>
+	<script src="lib/confetti.js"></script>
 	<script src="src/components/UserComponent.js"></script>
 	<script src="src/components/PushOnClick.js"></script>
 	<script src="src/components/PreloadText.js"></script>
