Menu screen Added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="src/scenes/SplashScreenScene.js"></script>
 	<script src="src/scenes/Level.js"></script>
 	<script src="src/scenes/ResultScene.js"></script>
+	<script src="src/scenes/MenuScene.js"></script>
 	<script src="src/main.js"></script>
 
 	<link rel="stylesheet preload" as="font" href="/assets/fonts/Halo3.ttf" type="font/ttf" crossorigin />
@@ -38,6 +39,7 @@
 		// var posX;
 		var gameArray;
 		var playerWon="";
+		var enableBot
 	</script>
 </body>
 
