--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 		var gameArray;
 		var playerWon="";
 		var enableBot
+		var joystick=false;
+		// var soundManagerObj = new SoundManager(this);
+		// soundManagerObj.playSound(soundManagerObj.backgroundSound, true);
 	</script>
 </body>
 
